--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-pubsub",
-  "version": "0.0.1",
+  "version": "0.0.1-beta",
   "description": "provide google cloud pubsub for egg.js",
   "eggPlugin": {
     "name": "pubsub"
